# soundx

./: LICENSE  Makefile  README.md  Soundx.py  labels.py  modal_infra.py  modal_test.py  pyproject.toml  requirements.txt
pages/: Dataset.py  Evaluation.py  Model.py  Results.py  Train.py
src/: multi_eval.py  multi_train.py  train.py
